--- a/sample/src/main/res/values/links.xml
+++ b/sample/src/main/res/values/links.xml
@@ -8,4 +8,5 @@
     <string name="link_blog_queue">https://www.tumblr.com/docs/en/api/v2#blog-queue</string>
     <string name="link_blog_drafts">https://www.tumblr.com/docs/en/api/v2#blog-drafts</string>
     <string name="link_posting">https://www.tumblr.com/docs/en/api/v2#posting</string>
+    <string name="link_post_edit">https://www.tumblr.com/docs/en/api/v2#editing</string>
 </resources>
